test/modules/implicit/parseTwice/main.good
SomeLibrary.chpl:1: error: In use/imported file, module name M does not match file name SomeLibrary.chpl
main.chpl:1: In function 'main':
main.chpl:2: error: cannot find module or enum named 'SomeLibrary'
