test/modules/implicit/parseTwice/main.chpl
proc main() {
  use SomeLibrary only;
  writeln(SomeLibrary.M.x);
}
